fixes inaccurate cropped image display

--- a/app/styles/components/photo-banner.less
+++ b/app/styles/components/photo-banner.less
@@ -63,7 +63,7 @@
 }
 
 .PhotoBanner-thumbnail {
-margin-top: 35px;
+  margin-top: 35px;
   position: absolute;
   z-index: 2;
   top: 1px;
@@ -74,8 +74,8 @@ margin-top: 35px;
 
   @media (min-width: @screen-sm-min) {
     font-size: 48px;
-    width: 100%;
-    height: 250px;
+    width: 21vw;
+    height: 21vw;
   }
 
   @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -84,8 +84,6 @@ margin-top: 35px;
 
   @media (min-width: @screen-lg-min) {
     font-size: 48px;
-    width: 100%;
-    height: 270px;;
   }
 }
 
